# SignalTacticsOrig

./: .dockerignore  .replit  ATAS_INTEGRATION_COMPLETE.md  ATAS_INTEGRATION_GUIDE.md  BOT_ENHANCEMENT_REPORT.md  BOT_SUMMARY.md  COMPREHENSIVE_BACKTEST_REPORT.md  COMPREHENSIVE_SETUP_GUIDE.md  CORNIX_FORMAT_FINAL_COMPLETE.md  CORNIX_FORMAT_OPTIMIZED.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICK_REFERENCE.txt  Dockerfile  ENHANCED_BOT_OPTIMIZATION_REPORT.md  ENHANCED_BOT_README.md  ENHANCED_TP_DEPLOYMENT_SUMMARY.md  FILES_CREATED_AND_MODIFIED.txt  FINAL_DEPLOYMENT_STATUS.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_MICROSTRUCTURE_DEPLOYMENT.txt  FINAL_PRODUCTION_DEPLOYMENT.md  FINAL_PRODUCTION_REPORT_COMPREHENSIVE.txt  FINAL_PRODUCTION_REPORT_INSIDER_TRADING.txt  FINAL_PRODUCTION_REPORT_ORDER_FLOW.txt  FINAL_PRODUCTION_STATUS.md  IMPLEMENTATION_COMPLETE.md  MARKET_INTELLIGENCE_DEPLOYMENT_SUMMARY.txt  MICROSTRUCTURE_ENHANCEMENT_SUMMARY.md  OFFICIAL_CORNIX_FORMAT_COMPLETE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_FINAL_COMPLETE.txt  PRODUCTION_FIXES_COMPLETE.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READY.md  PRODUCTION_READY_DEPLOYMENT_REPORT.txt  PROJECT_SUMMARY.md  QUICK_START.md  QUICK_START_TELEGRAM.md  RAILWAY_DEPLOYMENT.md  (+147 more)
SignalMaestro/: advanced_auto_train_ml_system.py  advanced_error_handler.py  advanced_liquidity_analyzer.py  advanced_market_depth_analyzer.py  advanced_ml_trading.db  advanced_order_flow_analyzer.py  advanced_order_flow_scalping_strategy.py  advanced_time_fibonacci_strategy.py  advanced_trading_strategy.py  config.py  (+105 more)
(+113 files in other folders)
