[project]
name = "ai-trading-signal-bot"
version = "2.0.0"
description = "AI-Powered UT Bot + STC Trading Signal System for Telegram"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.8.0",
    "aiosqlite>=0.19.0",
    "ccxt>=4.0.0",
    "flask>=2.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b0",
    "psutil>=5.9.0",
    "python-binance>=1.0.19",
    "python-telegram-bot==20.7",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
